also add for terraform

--- a/index.html
+++ b/index.html
@@ -440,6 +440,11 @@
                     <span class="title">Docker Commands</span>
                     <span class="description">Containerization commands guide</span>
                 </li>
+                <li class="file-item" data-file="terraform">
+                    <span class="emoji">🏗️</span>
+                    <span class="title">Terraform Deep Dive</span>
+                    <span class="description">Infrastructure as Code guide</span>
+                </li>
                 <li class="file-item" data-file="mongoose">
                     <span class="emoji">🐱</span>
                     <span class="title">Mongoose ORM</span>
@@ -494,6 +499,11 @@
                 title: 'Docker & Docker Compose Commands Guide',
                 subtitle: 'Essential commands and examples',
                 file: 'DOCKER_COMMANDS_GUIDE.md'
+            },
+            'terraform': {
+                title: 'Terraform Deep Dive',
+                subtitle: 'Complete Infrastructure as Code guide',
+                file: 'TERRAFORM_DETAILED_EXPLANATION.md'
             },
             'mongoose': {
                 title: 'Mongoose ORM Complete Guide',
