add new for nginx

--- a/index.html
+++ b/index.html
@@ -445,6 +445,11 @@
                     <span class="title">Networking Basics</span>
                     <span class="description">Complete networking guide</span>
                 </li>
+                <li class="file-item" data-file="nginx">
+                    <span class="emoji">🌐</span>
+                    <span class="title">nginx Security Guide</span>
+                    <span class="description">SSL/TLS, SSH, certbot & openSSL guide</span>
+                </li>
                 <li class="file-item" data-file="docker">
                     <span class="emoji">🐳</span>
                     <span class="title">Docker Commands</span>
@@ -519,6 +524,11 @@
                 title: 'Networking Basics',
                 subtitle: 'Complete guide to computer networking fundamentals',
                 file: 'NETWORKING_OVERVIEW.md'
+            },
+            'nginx': {
+                title: 'nginx Security & Infrastructure Guide',
+                subtitle: 'Complete guide to SSL/TLS, SSH authentication, and load balancing',
+                file: 'NGINX_SSL_SSH_SECURITY_GUIDE.md'
             },
             'docker': {
                 title: 'Docker & Docker Compose Commands Guide',
